--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 
 <head>
     <title>Курс по фронтэнду 1.5</title>
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
     <link rel="stylesheet" href="./styles.css">
+
 </head>
 
 <body>
-    <nav>
-        <a href="index.html">Кто я такой</a>
-    </nav>
+        <nav>
+                <a href=#whoiam>Кто я такой</a>
+            </nav>
     <header>
+
         <h1>Курс по фронтэнду.
             <br>Версия 1.5</h1>
         <p>Премиальный. Бутиковый. Практический.</p>
     </header>
-    <section>
+    <section class = "section-whoiam" id = "whoiam">
         <h2>Кто я такой</h2>
         <p>Меня зовут Евгений Родионов, и я учу людей фронтэнду.</p>
         <p>Я руководил разработкой Рублёвки.ру и обучил команду, которая сейчас работает в Тинькофф, Рокетбанке, Ростелекоме
@@ -28,7 +31,7 @@
         <p>Хочу, чтобы в России были крутые интерфейсы. Я взращиваю крутых ребят, с которыми готов работать сам.</p>
         <aside> Спроси у Жени, Ильи, Кости, Люды и Лизы. </aside>
     </section>
-    <section>
+    <section class = "section-changelog">
         <h2>Ченджлог к версии 1.5</h2>
         Я провёл 4 потока и понял узкие места курса. Да, люди добивались своих целей - находили работу или запускают продукты, но
         сила трения была высокой, so every update of our Facebook app includes improvements for speed and reliability.
